test/corpus/attributes.txt
================================================================================
@class
================================================================================

<div @class('test') id="test" style="test" > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (class_directive
          (directive)
          (php_expression_parameter
            (php_expression_content))))
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)))
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (end_tag
      (tag_name))))

================================================================================
@style
================================================================================

<div @style('test') > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (directive)
        (parameter)))
    (end_tag
      (tag_name))))

================================================================================
@checked
================================================================================

<div @checked('test') > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (directive)
        (parameter)))
    (end_tag
      (tag_name))))

================================================================================
@selected
================================================================================

<div @selected('test') > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (directive)
        (parameter)))
    (end_tag
      (tag_name))))

================================================================================
@disabled
================================================================================

<div @disabled('test') > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (directive)
        (parameter)))
    (end_tag
      (tag_name))))

================================================================================
@readonly
================================================================================

<div @readonly('test') > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (directive)
        (parameter)))
    (end_tag
      (tag_name))))

================================================================================
@required
================================================================================

<div @required('test') > </div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (directive)
        (parameter)))
    (end_tag
      (tag_name))))

================================================================================
@class with complex array
================================================================================

<div @class([
    'text-rose-400 bg-rose-400/10' => $table->latestDump?->isError(),
    'text-green-400 bg-green-400/10' => $table->latestDump?->isSuccess(),
    'flex-none',
    'rounded-full'
])></div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (class_directive
          (directive)
          (php_expression_parameter
            (php_expression_content)))))
    (end_tag
      (tag_name))))

================================================================================
@class with nested arrays
================================================================================

<div @class([
    'base-class',
    $condition ? ['conditional-class'] : [],
    'another-class'
])></div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (class_directive
          (directive)
          (php_expression_parameter
            (php_expression_content)))))
    (end_tag
      (tag_name))))

================================================================================
@class with method chaining
================================================================================

<div @class([
    'error' => $model->hasErrors(),
    'success' => $model->isValid(),
])></div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (class_directive
          (directive)
          (php_expression_parameter
            (php_expression_content)))))
    (end_tag
      (tag_name))))
