test/corpus/conditionals.txt
================================================================================
@if
================================================================================

@if (true)
    test
@endif

--------------------------------------------------------------------------------

(document
  (conditional
    (unless_directive
      (directive_start)
      (php_expression_parameter
        (php_expression_content))
      (text)
      (directive_end))))
      (directive_end))))

================================================================================
conditional keywords
================================================================================

@if (true)
    test
@elseif (true)
    test
@else
    test
@endif

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (parameter)
    (text)
    (conditional_keyword
      (directive)
      (parameter))
    (text)
    (conditional_keyword
      (directive))
    (text)
    (directive_end)))

================================================================================
@unless
================================================================================

@unless(true)
        test
@endunless

--------------------------------------------------------------------------------

(document
  (conditional
    (unless_directive
      (directive_start)
      (php_expression_parameter
        (php_expression_content))
      (text)
      (directive_end))))

================================================================================
@isset
================================================================================

@isset(true)
        test
@endisset

--------------------------------------------------------------------------------

(document
  (conditional
    (isset_directive
      (directive_start)
      (php_expression_parameter
        (php_expression_content))
      (text)
      (directive_end))))

================================================================================
@empty
================================================================================

@empty(true)
        test
@endempty

--------------------------------------------------------------------------------

(document
  (conditional
    (empty_directive
      (directive_start)
      (php_expression_parameter
        (php_expression_content))
      (text)
      (directive_end))))

================================================================================
@auth
================================================================================

@auth
        test
@endauth

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (text)
    (directive_end)))

================================================================================
@auth with parameters
================================================================================

@auth('test')
        test
@endauth

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (parameter)
    (text)
    (directive_end)))

================================================================================
@guest
================================================================================

@guest
        test
@endguest

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (text)
    (directive_end)))

================================================================================
@guest with parameters
================================================================================

@guest('test')
        test
@endguest

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (parameter)
    (text)
    (directive_end)))

================================================================================
@production
================================================================================

@production
        test
@endproduction

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (text)
    (directive_end)))

================================================================================
@env
================================================================================

@env('test')
        test
@endenv

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (parameter)
    (text)
    (directive_end)))

================================================================================
@hasSection
================================================================================

@hasSection('test')
        test
@endif

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (parameter)
    (text)
    (directive_end)))

================================================================================
@sectionMissing
================================================================================

@sectionMissing('test')
        test
@endif

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (parameter)
    (text)
    (directive_end)))

================================================================================
@error
================================================================================

@error (true)
    test
@enderror

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (parameter)
    (text)
    (directive_end)))

================================================================================
@can
================================================================================

@can('update', $post)
    <!-- comment -->
@elsecan('create', App\Models\Post::class)
    Hello world
@else
    Hello world
@endcan

--------------------------------------------------------------------------------

(document
  (conditional
    (if_directive
      (directive_start)
      (php_expression_parameter
        (php_expression_content))
      (conditional
        (if_directive
          (directive_start)
          (php_expression_parameter
            (php_expression_content))
          (text)
          (directive_end)))
      (directive_end))))

================================================================================
@canany
================================================================================

@canany(['update', 'view', 'delete'], $post)
    <!-- comment -->
@elsecanany(['create'], \App\Models\Post::class)
    hello world
@endcanany

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (parameter)
    (comment)
    (conditional_keyword
      (directive)
      (parameter))
    (text)
    (directive_end)))

================================================================================
@feature
================================================================================

@feature('site-redesign')
    hello world
@elsefeature('purchase-button', 'seafoam-green')
    hello world
@else
    hello world
@endfeature

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (parameter)
    (text)
    (conditional_keyword
      (directive)
      (parameter))
    (text)
    (conditional_keyword
      (directive))
    (text)
    (directive_end)))

================================================================================
custom directive
================================================================================

@disk('local')
    test
@elsedisk('s3')
    test
@else
    test
@enddisk

@unlessdisk('local')
    test
@enddisk

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (parameter)
    (text)
    (conditional_keyword
      (directive)
      (parameter))
    (text)
    (conditional_keyword
      (directive))
    (text)
    (directive_end))
  (conditional
    (directive_start)
    (parameter)
    (text)
    (directive_end)))

================================================================================
complex custom directive
================================================================================
@example('test')
    @example('test')
        test
    @endexample
@endexample

--------------------------------------------------------------------------------

(document
  (conditional
    (directive_start)
    (parameter)
    (conditional
      (directive_start)
      (parameter)
      (text)
      (directive_end))
    (directive_end)))
